--- a/Dockerfile_chat_frontend_streamlit
+++ b/Dockerfile_chat_frontend_streamlit
@@ -5,4 +5,4 @@ COPY ./rag_corpus/staged/ug_cat/ug_cat_metadata.csv /app/rag_corpus/ug_cat/ug_ca
 RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
 EXPOSE 8501
-CMD ["streamlit", "run","chat_frontend.py"]
+CMD ["streamlit", "run","chat_frontend.py","--server.port", "8501"]
