Enhanced feature X in chat_backend

--- a/Dockerfile_chat_frontend_streamlit
+++ b/Dockerfile_chat_frontend_streamlit
@@ -2,6 +2,7 @@ FROM python:3.13-slim
 WORKDIR /app
 COPY ./chat_frontend_streamlit /app
 COPY ./rag_corpus/staged/ug_cat/ug_cat_metadata.csv /app/rag_corpus/ug_cat/ug_cat_metadata.csv
+COPY ./rag_corpus/staged/ug_cat/ug_cat_courses.csv /app/rag_corpus/ug_cat/ug_cat_courses.csv
 RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
 EXPOSE 8501
