--- a/Dockerfile_chat_backend
+++ b/Dockerfile_chat_backend
@@ -6,3 +6,4 @@ RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
 EXPOSE 8001
 CMD ["uvicorn", "app:app","--host","0.0.0.0","--port","8001"]
+ENV PYTHONPATH=/app
